examples/test/testpolicy7745.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7745
  namespace: namespace112
spec:
  podSelector:
    matchLabels:
      key17: value5
      key3: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value41
          key31: value34
          key18: value30
      podSelector:
        matchLabels:
          key5: value0
          key9: value28
          key17: value46
